# RedactifAI

./: .dockerignore  .env.example  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
alembic/: env.py  readme.md
alembic/versions/: .gitkeep  269581a47512_add_subcategory_to_phi_entities.py  3939668a42df_split_provider_into_ocr_and_phi_provider.py  3c4edce0fcce_initial_schema.py  de984ee720ca_add_phi_entities_table.py
docs/: Engineering Specification.md  Implementation Specification.md
src/: tasks.py
src/api/: auth.py  dependencies.py  main.py  schemas.py
src/config/: __init__.py  aws_settings.py  azure_settings.py  celery_settings.py  database.py  provider.py  settings.py  storage.py
src/db/: models.py  session.py
src/models/: __init__.py  domain.py
src/services/: __init__.py  aws_comprehend_medical_service.py  aws_textract_service.py  azure_ocr_service.py  azure_phi_detection_service.py  deidentification_service.py  entity_matcher.py  image_masking_service.py  mock_ocr_service.py  mock_phi_detection_service.py  ocr_service.py  phi_detection_service.py  service_factory.py
src/storage/: __init__.py  base.py  factory.py  local.py  s3.py  settings.py
src/utils/: __init__.py  document_processor.py  tiff_processor.py
tests/: conftest.py
tests/integration/: test_api.py  test_celery_tasks.py  test_deidentification_service.py  test_mocked_pipeline.py
tests/mocks/: __init__.py
tests/unit/: test_api.py  test_aws_services.py  test_azure_ocr_service.py  test_azure_phi_detection_service.py  test_db.py  test_domain.py  test_entity_matcher.py  test_image_masking_service.py  test_mocked_pipeline.py  test_phi_entity.py  test_service_factory.py  test_storage.py  test_tasks.py
