[project]
name = "redactifai"
version = "0.1.0"
description = "Microservice that converts uses Azure Document Intelligence to mask PII in .tiff files"
authors = [
    {name = "ssgrummons",email = "samuel.grummons@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "azure-ai-formrecognizer (>=3.3.3,<4.0.0)",
    "azure-storage-blob (>=12.26.0,<13.0.0)",
    "boto3 (>=1.40.41,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.16.5,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.13.2"
moto = {extras = ["s3"], version = "^5.1.13"}

