[tool.poetry]
name = "redactifai"
version = "0.1.0"
description = "Microservice that converts uses Azure Document Intelligence to mask PII in .tiff files"
authors = ["ssgrummons <samuel.grummons@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
sqlalchemy = {version = ">=2.0.43,<3.0.0", extras = ["asyncio"]}
asyncpg = ">=0.30.0,<0.31.0"
aiosqlite = ">=0.21.0,<0.22.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=6.4.0,<7.0.0"
azure-ai-formrecognizer = ">=3.3.3,<4.0.0"
azure-storage-blob = ">=12.26.0,<13.0.0"
pillow = ">=11.3.0,<12.0.0"
pyyaml = ">=6.0.3,<7.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
alembic = ">=1.16.5,<2.0.0"
aiofiles = ">=24.1.0,<25.0.0"
python-levenshtein = ">=0.27.1,<0.28.0"
azure-ai-textanalytics = ">=5.3.0,<6.0.0"
aioboto3 = "13.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.13.2"
moto = {version = "5.0.21", extras = ["s3"]}

