[tool.poetry]
name = "redactifai"
version = "0.1.0"
description = "Microservice that converts uses Azure Document Intelligence to mask PII in .tiff files"
authors = ["ssgrummons <samuel.grummons@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.128.7"
uvicorn = "^0.40.0"
sqlalchemy = {version = ">=2.0.43,<3.0.0", extras = ["asyncio"]}
asyncpg = "^0.31.0"
aiosqlite = "^0.22.1"
celery = ">=5.5.3,<6.0.0"
redis = "^7.1.1"
azure-ai-formrecognizer = ">=3.3.3,<4.0.0"
azure-storage-blob = ">=12.26.0,<13.0.0"
pillow = "^12.1.0"
pyyaml = ">=6.0.3,<7.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
python-multipart = "^0.0.22"
alembic = ">=1.16.5,<2.0.0"
aiofiles = "^25.1.0"
python-levenshtein = ">=0.27.1,<0.28.0"
azure-ai-textanalytics = ">=5.3.0,<6.0.0"
aioboto3 = "^15.5.0"
psycopg2-binary = "^2.9.10"
tifffile = "^2026.1.14"
numpy = "^2.4.1"
imagecodecs = "^2026.1.14"
starlette = "^0.52.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.13.2"
moto = {version = "5.0.21", extras = ["s3"]}
httpx = "^0.28.1"
pytest-html = "^4.2.0"
pytest-xdist = "^3.8.0"

